--- a/02-mod02.Rmd
+++ b/02-mod02.Rmd
@@ -403,7 +403,7 @@ img <- readPNG("figures/002_17.png")
 grid.raster(img)
 ```
 
-In general, while the Damkholer number increases, the system will require fewer CSTRs to get the desired level of conversion. [solution](https://github.com/aliglara/ebook_che5314_ucv/blob/main/codes/lect_004CSTRSeries.ipynb)
+In general, while the Damkholer number increases, the system will require fewer CSTRs to get the desired level of conversion. [(Numerical solution)](https://github.com/aliglara/ebook_che5314_ucv/blob/main/codes/lect_004CSTRSeries.ipynb)
 
 The total capital cost is an important parameter rather than the total reactor volume in a practical situation. Increasing the number of CSTRs in series will reduce the total cost by reducing the required volume. However, it will also increase the price since more agitators, valves, piping, etc., will be required. The economic optimum usually occurs at a value of $N$ as low as 2 or 3. [@roberts2009]
 
@@ -411,8 +411,90 @@ The total capital cost is an important parameter rather than the total reactor v
 The optimal operation of a multistage CSTR can be considered from the point of view of minimizing the total volume V for a given throughput ($F_{A0}$) and fractional conversion ($X_A$). So it will be necessary an objective function for $V$ from the material balance together with a rate law and energy balance as required
 ::::
 
+#### CSTRs of different sizes in series {-}
+For reactions with slight density change is possible to find the outlet composition from a series of CSTRs by a graphical procedure due to the design equation of each CSTRs could be written as:
+\begin{equation}
+-\frac{1}{\tau_N} = \frac{(-r_A)_N}{C_{A,N} - C_{A,N-1}}
+\end{equation}
+
+```{r fig002015, out.width = "60%", echo=FALSE, fig.align='center', fig.cap='Graphical solution for multistage CSTRs - first-order reaction', fig.lp='fig:'}
+library(png)
+library(grid)
+img <- readPNG("figures/002_17.png")
+grid.raster(img)
+```
+
+Figure \@ref(fig:fig002015) shows a way to represent the material balances for each stage from a plot $1/(-r_A)$ as a function of $C_A$.
+
+Another interesting situation is finding the best setup to achieve a given conversion. Let us illustrate the use of this method considering two CSTRs in series under isothermal conditions, as shown in the Figure \@ref(fig:CSTRseriesdifV)
+
+```{r CSTRseriesdifV, out.width = "40%", echo=FALSE, fig.align='center', fig.cap='Graphical representation of two CSTRs in series', fig.lp='fig:'}
+library(png)
+library(grid)
+img <- readPNG("figures/CSTR_series_difV.png")
+grid.raster(img)
+```
+
+For the first CSTR, the design equation becomes
+\begin{equation}
+\frac{V_1}{F_{A0}} = \frac{X_{A1}}{-r_A(X_{A1})}
+\end{equation}
+
+while for the second one is:
+\begin{equation}
+\frac{V_2}{F_{A0}} = \frac{X_{A2} - X_{A1}}{-r_A(X_{A2})}
+\end{equation}
+
+These relations are graphically represented in the Figure \@ref(fig:CSTR_series_difV2). The cascade of CSTRs operates between known initial and final conversion levels, and the total reaction volume is represented by the sum of the shaded areas.
+
+```{r CSTRseriesdifV2, out.width = "40%", echo=FALSE, fig.align='center', fig.cap='Graphical representation of two CSTRs in series', fig.lp='fig:'}
+library(png)
+library(grid)
+img <- readPNG("figures/CSTR_series_difV02.png")
+grid.raster(img)
+```
+
+When the rectangle _KLMN_ is made as large as possible, the overall volume is minimized. Therefore, point $X_{A1}$ is the critical parameter to get the reactors' optimal size.
+
+For reaction rate expressions of the _n_th-order form, it can be shown that there is always one and only one point that minimizes the total volume when $n>0$. [@hill2014]
+
+The total reaction volume is:
+\begin{equation}
+V_1 + V_2 = F_{A0}\:\frac{X_{A1}}{(-r_A)_1} + F_{A0}\:\frac{X_{A2} - X_{A1}}{(-r_A)_2}
+(\#eq:totalVolume)
+\end{equation}
+
+The derivative of eq. \#ref(eq:totalVolume) respects to $X_{A1}$ is:
+\begin{equation}
+\frac{d\:\left(V_1 + V_2\right)}{dX_{A1}} = \frac{F_{A0}}{(-r_A)_1} + F_{A0}\:X_{A1}\left(\frac{d\:\left(1/(-r_A)_1\right)}{dX_{A1}}\right) - \frac{F_{A0}}{(-r_A)_2} = 0
+\end{equation}
+simplifying leads to
+\begin{equation}
+\frac{d\left(1/(-r_A)_1\right)}{dX_{A1}} = \frac{1/(-r_A)_2 - 1/(-r_A)_1}{dX_{A1}}
+\end{equation}
+
+Therefore, the minimum reaction volume will be found when the intermediate fractional conversion $X_{A1}$ is selected. The slope of the reaction rate curve at this conversion level is equal to the slope of the rectangle's diagonal KLMN, as is shown in figure \@ref(fig:CSTRseriesminV).
+
+```{r CSTRseriesminV, out.width = "40%", echo=FALSE, fig.align='center', fig.cap='Graphical representation of the minimum total reaction volume for two CSTRs in series', fig.lp='fig:'}
+library(png)
+library(grid)
+img <- readPNG("figures/CSTR_series_minV.png")
+grid.raster(img)
+```
+
+Generally, the optimum size ratio is dependent on the form of the reaction rate expression and on the conversion task specified. Table \@ref(tab:thumbRulesCSTRinSerie) summarizes the optimal configuration for CSTRs in series from a kinetic-order point of view. 
 
 
+kinetic-order _n_ | Optimal configuration
+- | -
+$n = 1$  	| same size  
+$n > 1$   | first tank with < volume 
+$n < 1$	| first tank with > volume
+Table: (\#tab:thumbRulesCSTRinSerie) Thumb-rules for optimal configuration for CSTRs in serie
+
+In engineering practice, the designer tends to select CSTRs with the same volume to minimize installation and operational costs.
+
+**Work in Progress**
 
 
 
