--- a/codes/lect_005CSTRStability.ipynb
+++ b/codes/lect_005CSTRStability.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "spectacular-perry",
+   "id": "agreed-gallery",
    "metadata": {},
    "source": [
     "# Operation of a cooled exothermic CSTR"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "excessive-bench",
+   "id": "commercial-institution",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "alert-nicaragua",
+   "id": "fifteen-particle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "floppy-rider",
+   "id": "helpful-stocks",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,11 +78,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "express-rider",
+   "id": "competent-whole",
    "metadata": {},
    "outputs": [],
    "source": [
-    "param = [U; A; E; ko; Fo; F; R; Cao; Vr; rho; Cp; To; ...\n",
+    "param = [U, A, E, ko, FF; R; Cao; Vr; rho; Cp; To; ...\n",
     "    DHr; rhoj; Cpj; Fj; Tjo];\n",
     "options = optimoptions('fsolve','Display','off');\n",
     "T = fsolve(@(x)f_003_04(x,param),To,options);\n",
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acoustic-weekly",
+   "id": "willing-letters",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "tutorial-texas",
+   "id": "bibliographic-volunteer",
    "metadata": {},
    "outputs": [],
    "source": [
