minor update py file

--- a/codes/lect_005CSTRStability.ipynb
+++ b/codes/lect_005CSTRStability.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "agreed-gallery",
+   "id": "heavy-regard",
    "metadata": {},
    "source": [
     "# Operation of a cooled exothermic CSTR"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "commercial-institution",
+   "id": "empty-control",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fifteen-particle",
+   "id": "hungarian-dining",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "helpful-stocks",
+   "id": "thousand-original",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,14 +78,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "competent-whole",
+   "id": "abandoned-providence",
    "metadata": {},
    "outputs": [],
    "source": [
-    "param = [U, A, E, ko, FF; R; Cao; Vr; rho; Cp; To; ...\n",
-    "    DHr; rhoj; Cpj; Fj; Tjo];\n",
-    "options = optimoptions('fsolve','Display','off');\n",
-    "T = fsolve(@(x)f_003_04(x,param),To,options);\n",
+    "param = np.array([U, A, E, ko, Fo, F, R, Cao, Vr, rho, Cp, To, \n",
+    "                  DHr, rhoj, Cpj, Fj, Tjo])\n",
+    "\n",
+    "T = fsolve(@(x)f_003_04(x,param), To, options);\n",
     "[~,CA, HX, Tj] = f_003_04(T,param);\n",
     "\n",
     "fprintf('La concentracion final de A es %1.3f lbmol/ft^3\\n', CA);\n",
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "willing-letters",
+   "id": "northern-england",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bibliographic-volunteer",
+   "id": "instructional-discovery",
    "metadata": {},
    "outputs": [],
    "source": [
